Directory: Support views_count sorting

--- a/dillo/templates/dillo/directory/user_directory.pug
+++ b/dillo/templates/dillo/directory/user_directory.pug
@@ -33,6 +33,7 @@ script(src='//unpkg.com/globe.gl')
           select#sort(name="sort")
             option(selected=(sort == '-likes_count') value="-likes_count") Likes Count
             option(selected=(sort == '-posts_count') value="-posts_count") Posts Count
+            option(selected=(sort == '-views_count') value="-views_count") Views Count
 
         div
           .btn(
