Wizard: Hide image upload field
The d-none does not exist anymore.

--- a/dillo/templates/dillo/components/_image_input.html
+++ b/dillo/templates/dillo/components/_image_input.html
@@ -3,4 +3,4 @@
 	<img id="js-avatar-preview" src="{{ widget.value.url }}" title="Change Picture">
 </div>
 {% endif %}
-<input class="d-none" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
+<input style="display: none" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
