Profile: Add new location_label property
This will be eventually renamed to 'location' once the location field
is dropped.

--- a/dillo/templates/dillo/directory/user_list_embed.pug
+++ b/dillo/templates/dillo/directory/user_list_embed.pug
@@ -29,7 +29,7 @@ li
         span #[i.i-post]{{ profile.posts_count }}
         | {% endif %}
 
-    .dir-user-subtitle {% firstof profile.location profile.country %}
+    .dir-user-subtitle {{ profile.location_label }}
 
     | {% if profile.bio %}
     .dir-user-item-bio {{ profile.bio }}
