Move initEmbedListMedia to parent template
Fixes missing function definition on mobile.

--- a/dillo/templates/dillo/post_detail_embed_slick_media.pug
+++ b/dillo/templates/dillo/post_detail_embed_slick_media.pug
@@ -10,6 +10,7 @@
 | {% endblock media %}
 
 | {% block javascript_media %}
+| {{ block.super }}
 script.
 	$(function () {
 		let $postMediaContainer = $('.post-media-container.js-with-post-detail-media-prefix');
