Homepage: Introduce sort by top and latest

--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -18,6 +18,18 @@
 
   | {% if '/explore/' in request.path_info %}
   .nav-tabbar
+    .dropdown
+      .btn-dropdown#dropdown-sorting(data-toggle="dropdown")
+        span {{ sort_label }}
+      .dropdown-menu
+        a.dropdown-item(
+          href="{% url 'explore' %}?sort=top",
+          class="{% if sort_value == 'top' %}active{% endif %}"
+        ) #[i.i-trending]{% trans 'Top Rated' %}
+        a.dropdown-item(
+          href="{% url 'explore' %}?sort=latest",
+          class="{% if sort_value == 'latest' %}active{% endif %}"
+        ) #[i.i-events]{% trans 'Most Recent' %}
     | {% if request.user.is_authenticated %}
     a.btn-tag(
       class="{% if '/bookmarks' in request.path_info %}active{% endif %}",
