--- a/dillo/templates/dillo/components/_post_media_video.pug
+++ b/dillo/templates/dillo/components/_post_media_video.pug
@@ -12,6 +12,7 @@
 		data-views_count="{{ video.views_count|compact_number }}",
 		playsinline,
 		controls,
+		poster="{{ video.static_asset.thumbnail.url }}",
 		muted)
 		source(src='{{ video.url_720p }}', type='video/mp4')
 		p.vjs-no-js
