--- a/dillo/templates/dillo/components/_post_media_video.pug
+++ b/dillo/templates/dillo/components/_post_media_video.pug
@@ -10,6 +10,7 @@
 		data-video_id="{{ video.static_asset.id }}",
 		data-framerate="{{ video.framerate }}",
 		data-views_count="{{ video.views_count|compact_number }}",
+		data-is_own="{% if request.user.is_authenticated and request.user == video.static_asset.user %}true{% endif %}"
 		playsinline,
 		controls,
 		poster="{{ video.static_asset.thumbnail.url }}",
