Events: Add icon to submit button to match other templates

--- a/dillo/templates/dillo/events/event_form.pug
+++ b/dillo/templates/dillo/events/event_form.pug
@@ -16,5 +16,7 @@ form.card(method="post", enctype="multipart/form-data")
 
   .card-cta
     button.btn.btn-primary(type="submit")
-      span {% trans 'Submit' %}
+      span
+        i.i-check
+        span {% trans 'Submit Event' %}
 | {% endblock content_card %}
