Share: Fix text for Pinterest
Ideally it should be an icon though.

--- a/dillo/templates/dillo/components/_button_share.pug
+++ b/dillo/templates/dillo/components/_button_share.pug
@@ -62,8 +62,7 @@ button.btn(
 					button.btn.btn-social-pinterest(
 						title="{% trans 'Share on' %} Pinterest", class="js-share-pop",
 						data-social-media="pinterest", data-share-url="{{ request.build_absolute_uri }}")
-						span
-							i.i-pinterest
+						span Pinterest
 
 					button.btn.btn-social-linkedin(
 						title="{% trans 'Share on' %} LinkedIn", class="js-share-pop",
