UI: Fix accent buttons in forms

--- a/dillo/templates/dillo/events/event_form.pug
+++ b/dillo/templates/dillo/events/event_form.pug
@@ -15,7 +15,7 @@ form.card(method="post", enctype="multipart/form-data")
     | {{ form | crispy }}
 
   .card-cta
-    button.btn.btn-primary(type="submit")
+    button.btn.btn-accent(type="submit")
       span
         i.i-check
         span {% trans 'Submit Event' %}
