--- a/dillo/templates/dillo/form_generic_embed_base.pug
+++ b/dillo/templates/dillo/form_generic_embed_base.pug
@@ -17,7 +17,7 @@ form(
 
 	.form-cta
 		.btn-toolbar-row.right
-			button.btn-theme-primary(
+			button.btn-accent(
 				type="submit",
 				value="{{ submit_label }}",
 				class="{{ submit_class }}")
