Post Create: Add comment about reel

--- a/dillo/templates/dillo/post_create.pug
+++ b/dillo/templates/dillo/post_create.pug
@@ -35,6 +35,7 @@
 
   .form-tip
     span {% trans "Tip: Use #hashtags to increase discoverability." %}
+    div Trying to upload your reel? #[a(href="{% url 'profile_edit' %}") Add your reel to your profile].
 
 
 | {% endblock content_card %}
